--- a/progetto/Pipfile
+++ b/progetto/Pipfile
@@ -4,7 +4,8 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-django = "*"
+django = "==4.0.0"
+channels = "==3.0.4"
 
 [dev-packages]
 autopep8 = "*"
